Wed Jan 06 17:45:06 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: changed the NEW_ITEM macros, as by the
	  syleguide they need to specify a type, so they need a custom
	  label passed

Wed Jan 06 17:25:26 1999  George Lebl  <jirka@5z.com>

	* gnome-stock.h: fix a typo in menu stock defines

Wed Jan 06 16:40:29 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: added some defines to make adding
	  standard items easier

1999-01-06  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app.c (gnome_app_set_statusbar): Changed beveling.  Now
	it's GTK_SHADOW_NONE.  I also changed the spacing to be 4 pixels.
	It'd be good if all applicable apps used this spacing, as well as
	the statusbar.  There are a lot of inconsistent apps out there...

1999-01-06  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-client.c (gnome_client_get_flags): New function.  Returns
 	the client's flags.
	(client_parse_func): Removed the setting of the master_client's
 	previous_id.
	(gnome_client_connect): Sets the previous_id to the id, that was
 	tried to connect to the session manager.

	* gnome-client.h (gnome_client_get_flags): New declaration.

1999-01-05  Jonathan Blandford  <jrb@redhat.com>

	* gnome-dentry-edit.c (gnome_dentry_edit_new_notebook): Text change

Tue Jan 05 02:12:52 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c,gnome-icon-entry.c: accept drops of
	  files on the image previews

Mon Jan 04 02:19:49 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-sel.c: when scaling icons, makes sure they're at least
	  1 pixel tall, wide.

Mon Jan 04 01:10:14 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-list.c: when appending or inserting imlib image
	  do a sanity check for NULL

	* gnome-icon-sel.c: if we can't clone the image, just ignore it

Sun Jan 03 17:57:52 1999  George Lebl  <jirka@5z.com>

	* gnome-file-entry.c: actually accept file drops of text/uri-list
	  there is still a problem of multiple files being dropped, I